--- a/packages/auth/index.html
+++ b/packages/auth/index.html
@@ -1,66 +1,66 @@
-<template name="login">
+<template name="authTemplate">
   <div class="container col-md-4 col-md-offset-4">
-    <h2>Login</h2>
-    <form id="login-form" role="form">
-      <div class="form-group">
-        <input type="email" class="form-control" id="login-email" placeholder="your@email.com" />
-      </div>
-      <div class="form-group">
-        <input type="password" class="form-control" id="login-password" placeholder="password" />
-      </div>
-      <div class="form-group">
-        <input type="submit" class="btn btn-primary" id="login-button" value="Sign in" />
-        <p><a href="/reset">Forgot your password?</a></p>
-        <p><a href="/register">Need to register?</a></p>
-      </div>
+    <h2>{{this.title}}</h2>
+    <form role="form">
+      {{> UI.contentBlock}}
     </form>
   </div>
+</template>
+
+<template name="login">
+  {{#authTemplate title="Login"}}
+    <div class="form-group">
+      <input type="email" class="form-control" id="login-email" placeholder="your@email.com">
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" id="login-password" placeholder="password">
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" id="login-button" value="Sign in">
+      <p><a href="/reset">Forgot your password?</a></p>
+      <p><a href="/register">Need to register?</a></p>
+    </div>
+  {{/authTemplate}}
 </template>
 
 <template name="register">
-  <div class="container col-md-4 col-md-offset-4">
-    <h2>Register</h2>
-    <form id="register-form" role="form">
-      <div class="form-group">
-        <input type="email" class="form-control" id="account-email" placeholder="your@email.com" />
-      </div>
-      <div class="form-group">
-        <input type="text" class="form-control" id="account-username" placeholder="username" />
-      </div>
-      <div class="form-group">
-        <input type="password" class="form-control" id="account-password" placeholder="at least 6 chars" />
-      </div>
-      <div class="form-group">
-        <input type="submit" class="btn btn-primary" id="create-account" value="Create Account" />
-      </div>
-    </form>
-  </div>
+  {{#authTemplate title="Register"}}
+    <div class="form-group">
+      <input type="email" class="form-control" id="account-email" placeholder="your@email.com">
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" id="account-username" placeholder="username">
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" id="account-password" placeholder="at least 6 chars">
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" id="create-account" value="Create Account">
+    </div>
+  {{/authTemplate}}
 </template>
 
 <template name="passwordRecovery">
-  <div class="container col-md-4 col-md-offset-4">
-    <h2>Reset</h2>
-    <form id="recovery-form" action="action">
-      <div class="form-group">
-        <input type="text" class="form-control" id="recovery-email" placeholder="your@email.com" />
-      </div>
-      <div class="form-group">
-        <input type="submit" class="btn btn-primary" value="Send Reset Instructions" />
-      </div>
-    </form>
-  </div>
+  {{#authTemplate title="Reset"}}
+    <div class="form-group">
+      <input type="text" class="form-control" id="recovery-email" placeholder="your@email.com">
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" value="Send Reset Instructions">
+    </div>
+  {{/authTemplate}}
 </template>
 
 <template name="passwordRecoveryComplete">
-  <div class="container col-md-4 col-md-offset-4">
-    <h2>Reset</h2>
-    <form id="new-password" role="form">
-      <div class="form-group">
-        <input type="text" class="form-control" id="new-password-password" placeholder="Enter new password (must be > 6)"/>
-      </div>
-      <div class="form-group">
-        <input type="submit" class="btn btn-primary" value="Change Password" />
-      </div>
-    </form>
-  </div>
+  {{#authTemplate title="Reset"}}
+    <div class="form-group">
+      <input type="password" class="form-control" id="new-password-password" placeholder="Enter new password (at least 6 chars)"/>
+    </div>
+    <div class="form-group">
+      <input type="password" class="form-control" id="new-password-repeat" placeholder="Repeat password"/>
+    </div>
+    <div class="form-group">
+      <input type="submit" class="btn btn-primary" value="Change Password">
+    </div>
+  {{/authTemplate}}
 </template>
