--- a/packages/auth/index.html
+++ b/packages/auth/index.html
@@ -1,6 +1,6 @@
 <template name="authTemplate">
   <div class="container col-md-4 col-md-offset-4">
-    <h2>{{this.title}}</h2>
+    <h2>{{title}}</h2>
     <form role="form">
       {{> UI.contentBlock}}
     </form>
